fixed name font size on mobile and tablet

--- a/react-frontend/src/header.css
+++ b/react-frontend/src/header.css
@@ -74,6 +74,9 @@ header > .main-pic > img {
   .about-me > p {
     font-size: 24px;
   }
+  header > .main-pic > h3 {
+    font-size: 32px;
+  }
 }
 
 @media screen and (max-width: 749px) {
@@ -99,7 +102,7 @@ header > .main-pic > img {
   }
 
   header > .main-pic > h3 {
-    font-size: 30px;
+    font-size: 22px;
   }
 
   .about-me > p {
